package query

import (
	"context"
	"log"

	"storage-engine/internal/services/query"
)

// Handler handles gRPC requests for queries
type Handler struct {
	service *query.Service
}

// NewHandler creates a new query handler
func NewHandler(service *query.Service) *Handler {
	return &Handler{
		service: service,
	}
}

// Query handles query requests
func (h *Handler) Query(ctx context.Context, req interface{}) (interface{}, error) {
	log.Println("🔍 Handling Query request")
	
	// TODO: Convert protobuf request to internal types
	// Validate query
	// Call service layer
	// Convert response to protobuf
	
	result, err := h.service.ExecuteQuery(ctx, req)
	if err != nil {
		log.Printf("❌ Error executing query: %v", err)
		return nil, err
	}
	
	// TODO: Return proper protobuf response
	return result, nil
}

// QueryStream handles streaming query requests
func (h *Handler) QueryStream(req interface{}, stream interface{}) error {
	log.Println("🌊 Handling QueryStream request")
	
	// TODO: Implement streaming query
	// Execute query
	// Stream results back to client
	// Handle large result sets efficiently
	
	return nil
}

// GetRecord handles single record retrieval
func (h *Handler) GetRecord(ctx context.Context, req interface{}) (interface{}, error) {
	log.Println("📄 Handling GetRecord request")
	
	// TODO: Convert protobuf request to internal types
	// Call service layer
	// Convert response to protobuf
	
	result, err := h.service.GetRecord(ctx, req)
	if err != nil {
		log.Printf("❌ Error getting record: %v", err)
		return nil, err
	}
	
	return result, nil
}

// GetRecords handles multiple record retrieval
func (h *Handler) GetRecords(ctx context.Context, req interface{}) (interface{}, error) {
	log.Println("📄 Handling GetRecords request")
	
	// TODO: Implement batch record retrieval
	// Optimize for bulk operations
	
	return nil, nil
}

// Aggregate handles aggregation queries
func (h *Handler) Aggregate(ctx context.Context, req interface{}) (interface{}, error) {
	log.Println("📊 Handling Aggregate request")
	
	// TODO: Convert protobuf request to internal types
	// Call service layer for aggregation
	// Convert response to protobuf
	
	result, err := h.service.ExecuteAggregate(ctx, req)
	if err != nil {
		log.Printf("❌ Error executing aggregate: %v", err)
		return nil, err
	}
	
	return result, nil
}

// ExplainQuery handles query plan requests
func (h *Handler) ExplainQuery(ctx context.Context, req interface{}) (interface{}, error) {
	log.Println("📋 Handling ExplainQuery request")
	
	// TODO: Generate query execution plan
	// Return plan details and cost estimates
	
	return nil, nil
}

// HealthCheck handles health check requests
func (h *Handler) HealthCheck(ctx context.Context, req interface{}) (interface{}, error) {
	log.Println("💓 Handling HealthCheck request")
	
	// TODO: Check service health
	// Return health status
	
	return nil, nil
}
